--- a/site/index.html
+++ b/site/index.html
@@ -3,6 +3,6 @@
 <head>
 	<title>Hello World! !</title>
 <body>
-<H1>Hello Coursera!</H1>
+<H1>Hello Coursera! Looks like a basic website. :)</H1>
 </body>
 </html>
